Add documentation for cluster setup